- when connection to the SIX is lost, the software tries to reconnect automatically

bugfixes:
- fix wrong time format in tooltips in the data graph
- fix wrong units on time axis for the temperature
- Live mode did not react on changed inputs
- enable to reconnect after the pump driver USB cable was accidentally removed


from version 0.997.1 to 0.998

improvements:
- it is now possible to automatically recalibrate after a pump step of choice
- new option to turn off the temperature correction
- more stable serial data readout mechanism


from version 0.997 to 0.997.1

bugfixes:
- fix buffer overflow for long SIX measurements
- fix enabling state of valve controls


from version 0.996 to 0.997

improvement:
- it is now possible to control up to 8 valves in a setup
  (by outputting 3.3 V to the valve controller)

bugfix:
- the pumps 5-8 in step 1 were by default disabled


from version 0.995.1 to 0.996

bugfixes:
- fix the Free Pumps functionality
- when the USB connection to the driver was lost, the software could be in a
  state where it could no longer readout the firmware version after reconnecting


from version 0.995 to 0.995.1

compilation:
- Win32 builds are now available
- since this release at least Lazarus 2.2 is necessary to compile


from version 0.994 to 0.995

improvements:
- it is now possible to change the time unit in the sensro data chart
  via the context menu (right-click into the chart)
- with a right-click on the Sensor Data File field it is possible
  to change it and this way trigger a new data acquisition run
- always display current channel value, independent if channel is shown in chart

bugfixes:
- fix crash on unloading a .def file for IV4 sensors
- fix a minor UI issue in the pump control tab
- hide the Windows-specific context menu for some UI fields


from version 0.993 to 0.994

improvements:
- when changing the unit of the displayed diagram values to nA or mmol/l
  all diagram values will be recalculated to this unit